--- a/03-extra-tidyverse-review.Rmd
+++ b/03-extra-tidyverse-review.Rmd
@@ -173,6 +173,8 @@ mtautos %>%
 
 ## Iteraciones en R {-}
 
+<img src="images/purrr.jpg" />
+
 #### Funciones para iterar {-}
 
 + Base R 
@@ -196,6 +198,13 @@ mtautos %>%
 + `purrr::map2()` - aplica una función a un **par** de elementos de dos listas o vectores.
 + `purrr::pmap()` - aplica una función a un **grupo** de elementos de una lista de listas.
 
+Cada uno de ellos tiene subfunctiones con el sufijo del tipo de valores que se desean retornar, por ejemplo `purrr::map_dbl()` devuleve un vector númerico y `purrr::map_lgl()` uno de valores lógicos.
+
+Adicionalmente, si no deseamos retornar nada (en otras palabras, llamar a una función por sus "efectos secundarios", como graficar), podemos reemplazar `map` por `walk`:
++ `purrr::walk()` - aplica una función a cada elemento en una lista o vector.
++ `purrr::walk2()` - aplica una función a un **par** de elementos de dos listas o vectores.
++ `purrr::pwalk()` - aplica una función a un **grupo** de elementos de una lista de listas.
+
 #### Ejemplos {-}
 
 `mtautos` es el equivalente en español a `mtcars`
@@ -208,7 +217,236 @@ mtautos %>%
   dplyr::summarise(mean(millas))
 ```
 
+`paises` es el equivalente en español a `gapminder` (del paquete `gapminder`)
+```{r}
+paises <- datos::paises
+head(paises)
+```
+
 ##### Ejemplo 1 {-}
+Definamos una función muy simple
+
+```{r}
+suma_diez <- function(x) {
+  return(x + 10)
+}
+```
+
+Apliquemos la función usando `purrr::map`
+
+```{r}
+purrr::map(.x = c(1:5),
+           .f = suma_diez)
+
+# O sin los nombres:
+# purrr::map(c(1:5), suma_diez)
+```
+
+
+Pero, ¿no sería mejor retornar un vector númerico?
+
+```{r}
+purrr::map_dbl(c(1:5), suma_diez)
+```
+
+¿Y qué tal si queremos un *data frame*? 
+
+```{r, error=TRUE}
+purrr::map_df(c(1:5), suma_diez)
+```
+
+Algo no anda bien, esto se debe a nuestra definición de la función `suma_diez`, que solo retorna un vector númerico. Podríamos definir una nueva función o podemos aprender un pequeño truco (*funciones anónimas*):
+
+```{r}
+purrr::map_df(c(1:5), 
+              function(x) {
+                data.frame(original = x,
+                           nuevo = x + 10)
+              })
+```
+
+**Advertencia:** No es recomendable usar este "truco" para funciones muy complejas, siempre es mejor definir la función por separado y luego usarla dentro de `map`.
+
+Otra forma:
+
+```{r}
+purrr::map_df(c(1:5), ~data.frame(original = .x, nuevo = .x + 10))
+```
+
+##### Ejemplo 2 {-}
+
+Usemos el dataset llamado `paises`, para ver las classes de cada columna:
+
+```{r}
+paises %>% purrr::map_chr(class)
+```
+
+Si queremos ver el número de valores únicos en cada columna:
+
+```{r}
+paises %>% purrr::map_dbl(dplyr::n_distinct)
+```
+
+Podríamos resumir las dos operaciones anteriores en un solo paso:
+
+```{r}
+paises %>% 
+  purrr::map_df(~data.frame(clase = class(.x), 
+                            n_distintos = dplyr::n_distinct(.x)))
+```
+
+¿Y los nombres de las variables?
+```{r}
+paises %>% 
+  purrr::map_df(~data.frame(clase = class(.x), 
+                            n_distintos = dplyr::n_distinct(.x)), 
+                .id = "variable")
+```
+
+
+##### Ejemplo 3 {-}
+
+**Mapeos sobre dos objetos:**
+
+Extraígamos los continentes y años de `paises`:
+
+```{r}
+continente_anio <- paises %>%
+  dplyr::distinct(continente, anio)
+head(continente_anio)
+```
+
+```{r}
+lista_de_graficos <- 
+  purrr::map2(.x = continente_anio$continente,
+              .y = continente_anio$anio,
+              .f = ~paises %>%
+                dplyr::filter(continente == .x,
+                              anio == .y) %>%
+                ggplot2::ggplot() +
+                ggplot2::geom_point(ggplot2::aes(x = pib_per_capita,
+                                                 y = esperanza_de_vida)) +
+                ggplot2::labs(title = paste(.x, .y),
+                              x = "PIB per capita [USD]",
+                              y = "Esperanza de vida [años]")
+              )
+
+lista_de_graficos[[1]]
+lista_de_graficos[[22]]
+```
+
+¿Y para más de dos objetos? Podemos usar `pmap`.
+
+```{r}
+paises %>%
+  dplyr::distinct(pais, continente, anio) %>%
+  dplyr::slice(1:2) %>%
+  purrr::pmap(function(pais, continente, anio) {
+    paises %>%
+      dplyr::filter(pais == !!pais,
+                    continente == !!continente,
+                    anio == !!anio)
+  })
+```
+
+Este código no es muy útil, pero sirve para introducir el concepto de "mapeos múlti-objeto". Un caso en el que sería útil es si tenemos una tabla con combinaciones de párametros que deben ser ejecutados.
+
+El `!!` se llama el "operador bang-bang", podemos pensar de este como una forma de "forzar" la evaluación temprana de código antes de que la expresión en si sea ejecutada.
+
+En el código anterior, la expresión `pais == !!pais`, sería evaluada como `pais == "<VALOR DENTRO DE PAÍS>"`.
+
+##### Ejemplo 4 {-}
+
+**Agrupando datos**
+
+```{r}
+paises_agrupados <- paises %>%
+  dplyr::group_by(continente) %>%
+  tidyr::nest()
+
+paises_agrupados$data[[1]] %>% head()
+paises_agrupados$data[[5]] %>% head()
+```
+
+Alternativamente, podemos usar `purrr::pluck` para extraer elementos en una lista
+
+```{r}
+paises_agrupados %>%
+  purrr::pluck("data", 1) %>%
+  head()
+
+paises_agrupados %>%
+  purrr::pluck("data", 5) %>%
+  head()
+```
+
+¿Y esto para qué sirve? Bueno, podríamos calcular valores para cada "sub-grupo", por ejemplo: la esperanza de vida promedio por continente.
+
+```{r}
+paises_agrupados %>% 
+  dplyr::mutate(esperanza_de_vida_promedio = 
+                  purrr::map_dbl(data, ~mean(.x$esperanza_de_vida)))
+```
+
+Pero, podríamos usar `dplyr`, ¿no?
+
+```{r}
+paises %>%
+  dplyr::group_by(continente) %>%
+  dplyr::summarise(esperanza_de_vida_promedio = mean(esperanza_de_vida))
+```
+
+La idea es ilustrar el concepto, detrás del tipo de operaciones que podríamos ejecutar con `purrr`.
+
+
+**Ajustando un modelo lineal**
+
+Usando este mismo concepto, podríamos ajustar un modelo lineal para cada continente:
+```{r}
+paises_agrupados_ml <- paises_agrupados %>%
+  dplyr::mutate(ml = purrr::map(data, ~lm(esperanza_de_vida ~ poblacion + pib_per_capita + anio, data = .x)))
+paises_agrupados_ml
+```
+
+Para extraer el modelo de Asia:
+
+```{r}
+paises_agrupados_ml %>%
+  purrr::pluck("ml", 1)
+```
+
+
+*¿Y ahora qué sigue?* Podemos usar el modelo y los datos de entrada, para predecir la respuesta de los modelos:
+
+```{r}
+paises_agrupados_ml_predicciones <- paises_agrupados_ml %>%
+  dplyr::mutate(predicciones =
+                  purrr::map2(ml, data, ~predict(.x, .y)))
+paises_agrupados_ml_predicciones
+```
+
+*¿Y eso es todo?* No, podemos repetir este proceso para incluir más variables, como por ejemplo, la correlación:
+
+```{r}
+paises_agrupados_ml_predicciones_corr <- paises_agrupados_ml_predicciones %>%
+  dplyr::mutate(correlacion =
+                  purrr::map2_dbl(predicciones, data, ~cor(.x, .y$esperanza_de_vida)))
+paises_agrupados_ml_predicciones_corr
+```
+
+
+Finalmente, podemos usar uno de los paquetes de `tidymodels` (`broom`) para extraer algunas otras métricas, del modelo lineal:
+
+```{r}
+paises_agrupados_ml %>%
+  dplyr::select(-data) %>%
+  dplyr::mutate(metricas = purrr::map(ml, ~broom::tidy(.x))) %>%
+  dplyr::select(-ml) %>%
+  tidyr::unnest(metricas)
+```
+
+
+##### Ejemplo N-1 {-}
 
 Imaginen que queremos calcular los valores de R$^2$ para la regresión lineal de `peso` y millas por galón (`millas`), según el número de `cilindros`.
 
@@ -249,7 +487,7 @@ mtautos %>%
 ```
 
 
-##### Ejemplo 2 {-}
+##### Ejemplo N {-}
 
 Imaginen que necesitamos ejecutar varios análisis de varianza (ANOVA) unidireccionales, típicamente usaríamos el siguiente código:
 
@@ -276,28 +514,14 @@ mtautos %>%
                 transmision = factor(transmision)) %>%
   dplyr::select(millas, cilindrada, caballos) %>%
   purrr::map(~aov(.x ~ cilindros * transmision, data = mtautos)) %>%
-  purrr::map_dfr(~broom::tidy(.), .id = 'source') #%>%
+  purrr::map_dfr(~broom::tidy(.), .id = 'fuente') #%>%
   # mutate(p.value = round(p.value, 5))
 ```
 
 
-
-```{r, eval = FALSE}
-data("got_chars", package = "repurrrsive")
-listviewer::jsonedit(got_chars, mode = "view")
-```
-
-```{r, eval = FALSE}
-purrr::map(.x = got_chars, 
-           .f = magrittr::extract,
-           c("name"))
-purrr::map_dfr(.x = got_chars, 
-           .f = magrittr::extract,
-           c("name"))
-```
-
 ## Referencias {-}
 
 - [Purrr cheatsheet](https://raw.githubusercontent.com/rstudio/cheatsheets/master/purrr.pdf) para una referencia rápida.
-- Mock, T., 2018. Programación funcional en R con `purrr`: https://towardsdatascience.com/functional-programming-in-r-with-purrr-469e597d0229
+- Barter, R., 2019. *Learn to `purrr`*: https://www.rebeccabarter.com/blog/2019-08-19_purrr/
+- Mock, T., 2018. *Functional Programming in R with `purrr`*: https://towardsdatascience.com/functional-programming-in-r-with-purrr-469e597d0229
 - Wickham, H. and Grolemund, G., 2017. R para Ciencia de Datos: https://es.r4ds.hadley.nz
