--- a/12-model_tuning_and_the_dangers_of_overfitting.Rmd
+++ b/12-model_tuning_and_the_dangers_of_overfitting.Rmd
@@ -304,109 +304,15 @@ updated_params %>% pull_dials_object("mtry")
 
 The parameter object we just explored knows the range of the parameters. the `{dials}` package contains a number of `grid_*()` functions that takes the parameter object as input to produce different types of grids. Chapter 13 will explore this further.
 
-## Meeting Videos
 
-### Cohort 1
+## Videos de las reuniones
 
-`r knitr::include_url("https://www.youtube.com/embed/EarVQUj4XbQ")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:11:27	Jon Harmon (jonthegeek):	usethis::use_package("patchwork")
-00:23:12	Jon Harmon (jonthegeek):	@jim Which chapter are you going to present: 13? 14? 15? 😊
-00:27:52	Jim Gruman:	:) sure, 13 sounds good
-00:29:42	Jon Harmon (jonthegeek):	Woot!
-00:29:57	Jordan Krogmann:	1, 1000, 5000 is the correct answer
-00:31:11	Jon Harmon (jonthegeek):	Ok, Jim! You're PRed into the README, no take-backsies!
-00:33:44	Tan Ho:	fixed sorry
-00:35:29	Tony ElHabr:	i'm sorry but are these python generated graphs?
-00:35:33	Tony ElHabr:	unforgiveable
-00:36:06	Tan Ho:	gg
-00:36:12	Tan Ho:	i'm out
-00:36:54	Jon Harmon (jonthegeek):	Ok, after Jim everyone who's here will have gone at least once! Except wait Tan never actually went did he?????
-00:37:45	Tony ElHabr:	CALL HIM OUT
-00:38:03	Jon Harmon (jonthegeek):	TAN WHAT CHAPTER ARE YOU PRESENTING??? 14, right?
-00:39:01	Tan Ho:	*awkwardly looking around after going MIA from the book club since chapter 9*
-00:39:43	Tony ElHabr:	as long as tan gives us a killer review at the end of this all, then i'll give him a pass
-00:40:03	Jon Harmon (jonthegeek):	Fair! Tan *is* the master of the review week!
-00:40:21	Jon Harmon (jonthegeek):	I pinged Max on the Slack to see if we should do a review after 14, or after 15, or later, or what.
-00:40:55	Tony ElHabr:	how can we do a proper review if we never stop learning?
-00:41:14	Tan Ho:	I might  be more apt to do 15, I think?
-00:41:23	Jon Harmon (jonthegeek):	Yeah, this one is tricky 'cuz I'm not sure when it ends 🙃
-00:41:53	Tony ElHabr:	tan picks chapter 15 so he can have 3 weeks to prep :P
-00:42:02	Tan Ho:	two weeks to catch up and one week to prep!
-00:42:21	Tan Ho:	okay I lied twenty days to catch up and one day to prep, let's be honest
-00:42:46	Tony ElHabr:	21 days to catch up cuz you're going to live code
-00:42:51	Tan Ho:	fair!
-00:42:56	Tan Ho:	that part don't scare me
-00:54:23	Jordan Krogmann:	Thanks andy!
-00:54:23	Tan Ho:	if 16 isn't written by the time I present we can probably just review lol
-```
-</details>
-
-### Cohort 2
-
-`r knitr::include_url("https://www.youtube.com/embed/uHntG4id-Y8")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:13:12	Luke Shaw:	sounds cool :)
-00:13:26	Kevin Kent:	For sure!
-00:34:14	August:	https://www.tidymodels.org/learn/develop/models/
-00:34:21	August:	build your own engine]
-00:34:40	August:	that's what the link is sorry.
-00:39:39	Amélie Gourdon-Kanhukamwe (she/they):	Hear hear!
-00:43:23	August:	I've added it to the slack group
-00:43:36	August:	come learn bayes!!! 
-00:43:47	Kevin Kent:	Yeah I’m trying to convert :)
-00:54:30	Kevin Kent:	https://matrixprofile.org/
-00:55:53	August:	found it! 
-00:55:55	August:	https://www.tidymodels.org/learn/develop/recipes/
-00:56:48	Stephen Holsenbeck:	Good to see you too, thank you!
-00:56:49	Luke Shaw:	thanks Janita - see you all next week :)
-00:56:51	Amélie Gourdon-Kanhukamwe (she/they):	Sorry all, been working all night and I am knackered, but thanks Janita!
-```
-</details>
-
-
-### Cohort 3
-
-`r knitr::include_url("https://www.youtube.com/embed/fe3uixT_USg")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:36:03	Federica :	finalize() with {dial}  take a parameter object and modify the unknown parts
-00:44:40	Daniel Chen (TA), NYC:	https://dials.tidymodels.org/
-00:49:04	jiwan:	i think you're muted, couldn't hear you
-00:52:24	Federica :	I was wondering about the regularization_factor()
-00:54:21	jiwan:	These parameters are auxiliary to random forest models that use the "ranger" engine. They correspond to tuning parameters that would be specified using set_engine("ranger", ...).
-00:59:27	jiwan:	dials::mtry()
-# Randomly Selected Predictors (quantitative)
-Range: [1, ?]
-01:00:29	jiwan:	regularization.factor = tune("reg")
-01:00:42	jiwan:	regularization.factor = tune()
-01:03:32	jiwan:	> dials::regularization_factor
-function (range = c(0, 1), trans = NULL) 
-{
-    new_quant_param(type = "double", range = range, inclusive = c(TRUE, 
-        TRUE), trans = trans, default = 1, label = c(regularization_factor = "Gain Penalization"), 
-        finalize = NULL)
-}
-```
-</details>
-
-### Cohort 4
+### Cohorte 1
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
-  <summary> Meeting chat log </summary>
+  <summary> Chat de la reunión </summary>
   
 ```
 LOG
