--- a/14-iterative_search.Rmd
+++ b/14-iterative_search.Rmd
@@ -332,81 +332,15 @@ Voilààà!
 -   **Get started with tidymodels and TidyTuesday Palmer penguins**: <https://juliasilge.com/blog/palmer-penguins/>
 -   **A Visual Exploration of Gaussian Processes**: <https://distill.pub/2019/visual-exploration-gaussian-processes/#Multivariate>
 
-## Meeting Videos
 
-### Cohort 1
+## Videos de las reuniones
 
-`r knitr::include_url("https://www.youtube.com/embed/MD0XjJkZkxE")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:18:01	Conor Tompkins:	The cat is behind you
-```
-</details>
-
-### Cohort 2
-
-`r knitr::include_url("https://www.youtube.com/embed/B2RRopTnwds")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:40:55	Janita Botha:	can you zoom in please?
-00:44:58	Janita Botha:	all good
-00:45:00	Janita Botha:	:)
-00:47:42	Janita Botha:	thanks stephen
-00:47:48	Amélie Gourdon-Kanhukamwe (she/they):	Thanks!
-00:48:24	Stephen:	https://docs.google.com/spreadsheets/d/1vD4LG4_nhsxSAxXiBi42iKIvZXQtNxgB5C_PUkIZ0wo/edit#gid=0
-00:53:14	Janita Botha:	Yes!
-00:54:07	Janita Botha:	bye!
-00:54:12	Amélie Gourdon-Kanhukamwe (she/they):	Bye!
-```
-</details>
-
-
-### Cohort 3
-
-`r knitr::include_url("https://www.youtube.com/embed/a_tg77VOtHk")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:11:21	Daniel Chen:	is this like picking the parameters for a given distribution? like beta(0, 1) vs beta(0.1, 0.9)?
-00:12:09	Daniel Chen:	ok nvm this is the svm example right now. I guess that question is for the Bayesian point
-00:12:49	Jiwan Heo:	I think so, updating priors to make posterior distribution
-00:31:36	Daniel Chen:	the usemodels is mainly a way to help you out with somewhat reasonable defaults
-00:35:02	Daniel Chen:	like the "caterpillar plot" to help you see if things converged?
-00:35:08	Jiwan Heo:	yea!
-00:38:13	Daniel Chen:	i forgot what data is using? the post resamples?
-00:38:23	Daniel Chen:	you might need to manually pull that out from the data?
-00:44:57	Daniel Chen:	for the bayes stuff. is there a way to change the backend for the bayes calculation? e.g., using STAN or something?
-00:47:33	Jiwan Heo:	maybe in the model spec?
-00:47:43	Jiwan Heo:	bayes.model = linear_reg() %>%
-  set_engine(engine = "stan", 
-             prior_intercept = prior.dist, 
-             prior = prior.dist) %>%
-  set_mode(mode = "regression")
-00:49:08	Daniel Chen:	oooh. yeah. okay
-00:54:52	Daniel Chen:	yeah i guess this ends up being hard since bayes is anaother layer of things to understand the examples
-00:55:07	Daniel Chen:	i do wonder if the SVM example or something can/should be simplified to be used as a chapter 0
-00:55:26	Daniel Chen:	I've only really used grid search in the past personally in the past
-00:55:36	Daniel Chen:	but i was before tidymodels and all hand coded
-00:55:42	Daniel Chen:	expand.grid was a friend :)
-01:03:16	Jiwan Heo:	have to jump off, thank you for the presentation!
-01:09:27	Daniel Chen:	i'm good for next week
-```
-</details>
-
-### Cohort 4
+### Cohorte 1
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
-  <summary> Meeting chat log </summary>
+  <summary> Chat de la reunión </summary>
   
 ```
 LOG
