--- a/20-ensemble_models.Rmd
+++ b/20-ensemble_models.Rmd
@@ -120,114 +120,15 @@ tree_frogs_test <-
 ```
 
 
-## Meeting Videos
 
-### Cohort 1
+## Videos de las reuniones
 
-`r knitr::include_url("https://www.youtube.com/embed/J8rZ1u4PhM8")`
-
-`r knitr::include_url("https://www.youtube.com/embed/Pdm9G8nfR1g")`
-
-`r knitr::include_url("https://www.youtube.com/embed/bUECbzZuIDY")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-# 2021-05-25 Preview with Asmae Toumi
-00:07:45	tan-iphone:	timed with an audience
-00:08:00	tan-iphone:	did you get the cursive IDE set up?
-00:11:00	Tony ElHabr:	yup! victor mono is the secret
-00:18:44	tan-iphone:	foreach
-00:18:47	tan-iphone:	or future or something
-00:18:53	Marschall Furman (he/him):	parallel package
-00:19:55	Jim Gruman:	all_cores <- parallelly::availableCores(omit = 1)
-future::plan("multisession", workers = all_cores) # on Windows
-00:47:55	tan-iphone:	"you'll learn when you grow up"
-
-# 2021-06-01 Preview with Tony ElHabr
-00:08:56	Jon Harmon:	Like tensorflow but very few insane installation issues: https://github.com/mlverse/torch
-00:23:46	Daryn Ramsden:	Is it multinom_reg because there’s a logistic regression under the hood?
-00:25:18	Jon Harmon:	I think so, as far as google is telling me.
-00:27:19	Asmae Toumi:	Max’s quote: “One other note that is in the upcoming ensemble chapter about racing and stacking... the stack can only use the candidates that had the complete set of resamples done. With racing, it works fast by avoiding using all of the resamples for candidates that show poor performance. If the racing method quickly gets down to one tuning parameter set, that is the only candidate that can be added to the data stack (since it has the whole set of resamples.”
-00:27:26	Pavitra:	Why is there a rank jump from 2  to 12?
-00:27:51	Jon Harmon:	By model. It's showing the top 2 of each.
-00:28:00	Daryn Ramsden:	ohhhh
-00:28:35	Jon Harmon:	Er not by model per se but by... some combo....
-00:28:41	Daryn Ramsden:	So models ranked 3-11 are also rf?
-00:31:58	Asmae Toumi:	i’d be curious to see the stacks results without tune race anova
-00:33:16	Jon Harmon:	beepr always reminds me of this silliness that I had running a year and a half ago or so when Max had mentioned {tune} somewhere but the repo was still private... and it exactly solved something I was working on so I wanted to know as soon as it was public:
-tune_check <- httr::GET(
-  url = "https://github.com/tidymodels/tune"
-)
-while (httr::status_code(tune_check) == 404) {
-  Sys.sleep(15*60)
-  tune_check <- httr::GET(
-    url = "https://github.com/tidymodels/tune"
-  )
-}
-beepr::beep(8)
-00:58:21	Asmae Toumi:	Tony hive forever
-00:58:48	Asmae Toumi:	Can you send the code and data? I want to understand it better too
-01:00:11	Pavitra:	Ledell
-01:00:13	Asmae Toumi:	Erin LeDell is a legend
-01:00:22	Asmae Toumi:	It was so funny
-01:01:53	Pavitra:	Thank you Tony!! This was awesome
-01:01:54	Jim Gruman:	thank you!!
-01:02:00	Andrew G. Farina:	Thank you Tony!
-
-# 2021-10-05 Presentation with Simon Couch
-00:18:39	Jon Harmon (jonthegeek):	It's fun watching Simon's reactions to Asmae's presentation
-00:25:40	Tony ElHabr:	“the literature says” = max says
-00:26:00	tan:	"the tidyverse says" = Hadley says
-00:29:06	Jon Harmon (jonthegeek):	Current {stacks} version has elasticnet as default, not just lasso, Max! <- note to the future
-00:49:53	Simon Couch:	https://github.com/tidymodels/stacks/issues/91
-00:52:28	Bryan Shalloway:	There is parsnip::null_model() that you can use for comparing against the mean... not sure if it's possible to specify something *slightly* more sophisticated there...
-00:52:47	tan:	itsmesleepknee
-00:52:55	Jim Gruman:	thank you Asmae and Simon!!!
-00:54:47	Tony ElHabr:	See y’all next time… whenever that is
-00:56:55	Pavitra-Dallas:	Thanks asmae and Simon 🤗🤗🤗
-00:59:13	tan:	thanks folks!
-```
-</details>
-
-`r knitr::include_url("https://www.youtube.com/embed/j2jWX8_1tYY")`
-
-<details>
-  <summary> Meeting chat log: SLICED Discussion </summary>
-```
-00:37:14	Bryan Shalloway:	Curious if test set is a random sample? Or if it is segment time?
-```
-</details>
-
-### Cohort 3
-
-`r knitr::include_url("https://www.youtube.com/embed/SBl2ccerzwo")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:11:22	Daniel Chen:	hi. sorry i'm late
-00:12:14	Federica Gazzelloni:	hello
-00:14:27	Daniel Chen:	it's retraining all the indibidual models again?
-00:14:32	Daniel Chen:	before adding the weights?
-00:19:51	Federica Gazzelloni:	hello Jiwan you are stack 🙂
-00:45:17	Daniel Chen:	lm_form_fit %>% extract_fit_engine() %>% vcov()
-#>             (Intercept)  Longitude   Latitude
-#> (Intercept)     212.621  1.6113032 -1.4686377
-#> Longitude         1.611  0.0168166 -0.0008695
-#> Latitude         -1.469 -0.0008695  0.0330019
-00:45:23	Daniel Chen:	https://www.tmwr.org/models.html#use-the-model-results
-```
-</details>
-
-### Cohort 4
+### Cohorte 1
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
-  <summary> Meeting chat log </summary>
+  <summary> Chat de la reunión </summary>
   
 ```
 LOG
