--- a/21-inferential_analysis.Rmd
+++ b/21-inferential_analysis.Rmd
@@ -309,27 +309,15 @@ race_top_results %>%
 ```
 The key components are `bootstraps()` and `mutate + map` which give you quite a bit of flexibility to compute many statistics.
 
-## Meeting Videos
 
-### Cohort 3
+## Videos de las reuniones
 
-`r knitr::include_url("https://www.youtube.com/embed/p7CyaalpUNI")`
-
-<details>
-  <summary> Meeting chat log </summary>
-  
-```
-00:17:29	Federica Gazzelloni:	tidy function if you google it, this is what it pops up at first: https://www.rdocumentation.org/packages/broom/versions/0.3.4/topics/tidy
-00:53:19	Federica Gazzelloni:	calculate function: https://www.rdocumentation.org/packages/infer/versions/0.5.4/topics/calculate
-```
-</details>
-
-### Cohort 4
+### Cohorte 1
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
-  <summary> Meeting chat log </summary>
+  <summary> Chat de la reunión </summary>
   
 ```
 LOG
